--- a/fp2025.cabal
+++ b/fp2025.cabal
@@ -16,7 +16,7 @@ executable fp2025
     main-is:          Turing.hs
     -- other-modules:
     -- other-extensions:
-    build-depends:    base ^>=4.18.2.1,
+    build-depends:    base,
                       array,
                       containers,
                       QuickCheck
