break out the tape implementation and use ints for both symbols and macro symbols

--- a/fp2025.cabal
+++ b/fp2025.cabal
@@ -14,7 +14,8 @@ extra-doc-files:    CHANGELOG.md
 
 executable fp2025
     main-is:          Turing.hs
-    -- other-modules:
+    other-modules:    RList
+                      Tape
     -- other-extensions:
     build-depends:    base,
                       array,
@@ -34,3 +35,4 @@ executable fp2025
       ViewPatterns
       RecordWildCards
       PatternSynonyms
+      DerivingStrategies
