too complicated attempt at compressed lists

--- a/fp2025.cabal
+++ b/fp2025.cabal
@@ -15,6 +15,7 @@ extra-doc-files:    CHANGELOG.md
 executable fp2025
     main-is:          Turing.hs
     other-modules:    RList
+                      CList
                       Tape
                       Macro
     -- other-extensions:
