not yet working rule combination

--- a/fp2025.cabal
+++ b/fp2025.cabal
@@ -21,6 +21,8 @@ executable fp2025
                       -- New stuff
                       Data.List.Compressed
                       Data.List.Compressed.Pattern
+                      Test.QuickCheck.Extra
+                      Text.Pretty
                       Turing.Scratch
                       Turing.Types
                       Turing.Tape
